result/nginx.txt
smatch check :
/home/lsc20011130/CTestRobot/projects/nginx/src/core/nginx.c:224 main() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_parse.c:278 ngx_parse_time() warn: potential negative subtraction from max '9223372036854775807 - value'
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_resolver.c:1331 ngx_resolver_send_udp_query() error: we previously assumed 'rec->udp' could be null (see line 1326)
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_resolver.c:1417 ngx_resolver_send_tcp_query() error: we previously assumed 'rec->tcp' could be null (see line 1367)
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_slab.c:649 ngx_slab_free_locked() warn: ignoring unreachable code.
/home/lsc20011130/CTestRobot/projects/nginx/src/event/ngx_event_pipe.c:296 ngx_event_pipe_read_upstream() error: we previously assumed 'p->free_raw_bufs' could be null (see line 224)
/home/lsc20011130/CTestRobot/projects/nginx/src/event/ngx_event_pipe.c:358 ngx_event_pipe_read_upstream() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/event/ngx_event_pipe.c:455 ngx_event_pipe_read_upstream() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/event/ngx_event_pipe.c:474 ngx_event_pipe_read_upstream() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/event/ngx_event_udp.c:186 ngx_event_recvmsg() warn: variable dereferenced before check 'c->udp' (see line 179)
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_fastcgi_module.c:2401 ngx_http_fastcgi_input_filter() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_proxy_module.c:2255 ngx_http_proxy_chunked_filter() warn: inconsistent indenting
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_range_filter_module.c:381 ngx_http_range_parse() warn: potential negative subtraction from max '9223372036854775807 - (end - start)'
/home/lsc20011130/CTestRobot/projects/nginx/src/http/ngx_http_header_filter_module.c:541 ngx_http_header_filter() error: we previously assumed 'r->headers_out.location' could be null (see line 327)
/home/lsc20011130/CTestRobot/projects/nginx/src/http/ngx_http_request_body.c:1365 ngx_http_request_body_save_filter() error: we previously assumed 'rb->temp_file' could be null (see line 1353)
/home/lsc20011130/CTestRobot/projects/nginx/src/http/ngx_http_upstream.c:3173 ngx_http_upstream_send_response() error: we previously assumed 'r->cache' could be null (see line 3138)
/home/lsc20011130/CTestRobot/projects/nginx/src/http/ngx_http_upstream.c:4617 ngx_http_upstream_finalize_request() error: we previously assumed 'u->pipe' could be null (see line 4581)

cppcheck:
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_conf_file.c:90:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->conf_file = &conf_file;
    ^
/home/lsc20011130/CTestRobot/projects/nginx/src/core/ngx_conf_file.c:191:9: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
        cf->conf_file = &conf_file;
        ^
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_charset_filter_module.c:1285:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->ctx = &ctx;
    ^
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_geo_module.c:469:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->ctx = &ctx;
    ^
/home/lsc20011130/CTestRobot/projects/nginx/src/http/modules/ngx_http_map_module.c:273:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->ctx = &ctx;
    ^
/home/lsc20011130/CTestRobot/projects/nginx/src/http/ngx_http_variables.c:980:9: error: Uninitialized variable: len [uninitvar]
        len += header[i].value.len + 2;
        ^
/home/lsc20011130/CTestRobot/projects/nginx/src/mail/ngx_mail_pop3_module.c:189:45: error: Array 'ngx_mail_pop3_auth_methods_names[6]' accessed at index 9998, which is out of bounds. [arrayIndexOutOfBounds]
        if (ngx_mail_pop3_auth_methods_names[i].len == 0) {
                                            ^
/home/lsc20011130/CTestRobot/projects/nginx/src/mail/ngx_mail_pop3_module.c:260:45: error: Array 'ngx_mail_pop3_auth_methods_names[6]' accessed at index 9998, which is out of bounds. [arrayIndexOutOfBounds]
        if (ngx_mail_pop3_auth_methods_names[i].len == 0) {
                                            ^
/home/lsc20011130/CTestRobot/projects/nginx/src/os/unix/ngx_channel.c:189:18: error: Uninitialized variable: fd [uninitvar]
        ch->fd = fd;
                 ^
/home/lsc20011130/CTestRobot/projects/nginx/src/stream/ngx_stream_geo_module.c:439:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->ctx = &ctx;
    ^
/home/lsc20011130/CTestRobot/projects/nginx/src/stream/ngx_stream_map_module.c:272:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    cf->ctx = &ctx;
    ^
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

